--- a/index.html
+++ b/index.html
@@ -19,9 +19,29 @@
         canvas {
             display: block;
         }
+        .workflow-link {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background: #3498db;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-family: monospace;
+            font-size: 16px;
+            text-decoration: none;
+            z-index: 1000;
+            transition: background 0.3s ease;
+        }
+        .workflow-link:hover {
+            background: #2980b9;
+        }
     </style>
 </head>
 <body>
+    <a href="workflow/workflow.html" class="workflow-link">Animation Workflow</a>
     <canvas id="ribbonCanvas"></canvas>
     <script src="ribbon-animation.js"></script>
 </body>
