Update convert-to-standalone.html nuevo chat. cambiando el path

--- a/workflow/convert-to-standalone.html
+++ b/workflow/convert-to-standalone.html
@@ -129,7 +129,7 @@
     </style>
 </head>
 <body>
-    <a href="workflow/workflow.html" class="workflow-link">View All Workflow Steps</a>
+    <a href="workflow.html" class="workflow-link">View All Workflow Steps</a>
     
     <div class="container">
         <h1>Convert to Standalone</h1>
