Update download-files.html para conectar con los pasos del workflow

--- a/workflow/download-files.html
+++ b/workflow/download-files.html
@@ -477,4 +477,10 @@ document.addEventListener('DOMContentLoaded', function() {
         });
     </script>
 </body>
+            <script>
+    // Set current workflow step
+    document.addEventListener('DOMContentLoaded', function() {
+        localStorage.setItem('currentWorkflowStep', '3');
+    });
+</script>
 </html>
