--- a/workflow/workflow.html
+++ b/workflow/workflow.html
@@ -156,7 +156,7 @@
                 <div class="step-number">2</div>
                 <div class="step-content">
                     <div class="step-title">Convert to Standalone</div>
-                    <div class="step-description">Generate HTML and JavaScript files from your cleaned React code.</div>
+                    <div class="step-description">Generate HTML and JavaScript files from your cleaned React code and download them.</div>
                     <div class="step-status">Next Step</div>
                 </div>
                 <button class="step-button" onclick="navigateToStep('convert-to-standalone.html', 2)">Open Converter</button>
@@ -165,31 +165,21 @@
             <div class="step-card" data-step="3">
                 <div class="step-number">3</div>
                 <div class="step-content">
-                    <div class="step-title">Download Generated Files</div>
-                    <div class="step-description">Download the generated HTML and JavaScript files to your computer.</div>
+                    <div class="step-title">Upload to GitHub</div>
+                    <div class="step-description">Upload your files to GitHub to host them online.</div>
                     <div class="step-status">Next Step</div>
                 </div>
-                <button class="step-button" onclick="navigateToStep('download-files.html', 3)">Open Downloader</button>
+                <button class="step-button" onclick="navigateToStep('upload-to-github.html', 3)">View Instructions</button>
             </div>
             
             <div class="step-card" data-step="4">
                 <div class="step-number">4</div>
                 <div class="step-content">
-                    <div class="step-title">Upload to GitHub</div>
-                    <div class="step-description">Upload your files to GitHub to host them online.</div>
-                    <div class="step-status">Next Step</div>
-                </div>
-                <button class="step-button" onclick="navigateToStep('upload-to-github.html', 4)">View Instructions</button>
-            </div>
-            
-            <div class="step-card" data-step="5">
-                <div class="step-number">5</div>
-                <div class="step-content">
                     <div class="step-title">Generate Customization</div>
                     <div class="step-description">Create iframe code with customization options for your website.</div>
-                    <div class="step-status">Next Step</div>
+                    <div class="step-status">Final Step</div>
                 </div>
-                <button class="step-button" onclick="navigateToStep('../minimal-editor-with-percent.html', 5)">Open Customizer</button>
+                <button class="step-button" onclick="navigateToStep('../minimal-editor-with-percent.html', 4)">Open Customizer</button>
             </div>
         </div>
     </div>
