--- a/workflow/workflow.html
+++ b/workflow/workflow.html
@@ -170,7 +170,7 @@
                     <div class="step-description">Remove discursive comments from your React code to prepare it for conversion.</div>
                     <div class="step-status upcoming">Next Step</div>
                 </div>
-                <button class="step-button" onclick="navigateToStep('../code-editor.html', 1)">Open Code Editor</button>
+                <button class="step-button" onclick="navigateToStep('code-editor.html', 1)">Open Code Editor</button>
             </div>
             
             <div class="step-card" data-step="2">
